# kozmikaDil-next

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  k  kozmikadil_project_plan.md
.github/: actionlint.yaml  dependabot.yml
.github/perf/: perf_baseline.json
.github/scripts/: architecture_guard.py  microcontroller_readiness_gate.py  perf_regression_gate.py  platform_readiness_gate.py  platform_support_gate.py  precision_policy_guard.py
.github/workflows/: ci.yml  dependency-review.yml  full-validation.yml  gpu-backend-cicd.yml  gpu-backend-smoke.yml  phase10-github-gpu-probe.yml  security-codeql.yml  stability-nightly.yml  workflow-lint.yml
application/: README.md
application/config/: README.md
application/wiring/: README.md
bench/: CMakeLists.txt  report_phase10.md
bench/benchmarks/: CMakeLists.txt  bench_list.c  bench_matmul.c  bench_matrix_elemwise.c  bench_scalar.c
bench/scripts/: README.md  benchmark_crosslang_generic_ops_fastinit.py  benchmark_crosslang_generic_ops_fastinit.sh  benchmark_crosslang_matmul_chain4_runtime.py  benchmark_crosslang_matmul_chain4_runtime.sh  benchmark_crosslang_matmul_pair_runtime.py  benchmark_crosslang_matmul_pair_runtime.sh  run_crosslang_generic_ops_fastinit.py  run_crosslang_generic_ops_fastinit.sh  run_crosslang_matmul4_runtime.py  run_crosslang_matmul4_runtime.sh  run_crosslang_matmul_runtime.py  run_crosslang_matmul_runtime.sh  run_full_performance_audit.sh  run_generic_speedup.py  run_generic_speedup.sh  run_phase10_benchmarks.py  (+13 more)
compiler/: CMakeLists.txt
compiler/include/spark/: ast.h  codegen.h  cpu_features.h  evaluator.h  parser.h  semantic.h
compiler/include/spark/core/behavior/: compiler_behavior.h
compiler/include/spark/core/dto/: compiler_pipeline_dto.h
compiler/include/spark/core/mapper/: compiler_mapper.h
compiler/include/spark/core/mode/: compiler_mode.h
compiler/include/spark/core/ui/: compiler_ui.h
compiler/src/application/: main.cpp
compiler/src/common/: ast.cpp  cpu_features.cpp
compiler/src/core/driver/: lexer.cpp  parser.cpp
compiler/src/core/logic/: evaluator.cpp
compiler/src/core/manager/: semantic.cpp
compiler/src/core/servis/: codegen.cpp
compiler/src/phase1/: sparkc_main.cpp
compiler/src/phase1/sparkc_main_parts/: 01_common.cpp  02_pipeline.cpp  03_execute.cpp  04_main.cpp
compiler/src/phase2/: lexer.cpp  lexer.h  parser.cpp
compiler/src/phase2/parser_parts/: 00a_parser_text_utils.cpp  00b_parser_state_utils.cpp  01_parser_core.cpp  02a_parser_statement_dispatch.cpp  02b_parser_control_statements.cpp  02c_parser_definition_statements.cpp  03_parser_expressions.cpp  04a_parser_expression_unary_primary.cpp  04b_parser_expression_suffix.cpp
compiler/src/phase3/: evaluator.cpp  semantic.cpp
compiler/src/phase3/evaluator_parts/: 01_helpers.cpp  eval_dispatch.cpp  internal_helpers.h
compiler/src/phase3/evaluator_parts/expr/: expr_attribute.cpp  expr_binary.cpp  expr_bool.cpp  expr_call.cpp  expr_index.cpp  expr_list.cpp  expr_number.cpp  expr_string.cpp  expr_unary.cpp  expr_variable.cpp
compiler/src/phase3/evaluator_parts/expr_controllers/: 01_expr_controller_core.cpp
compiler/src/phase3/evaluator_parts/helpers/: 00_numeric_helpers.cpp  01_slice_helpers.cpp  02_index_chain.cpp
compiler/src/phase3/evaluator_parts/stmt/: stmt_assign.cpp  stmt_break.cpp  stmt_class.cpp  stmt_continue.cpp  stmt_expression.cpp  stmt_for.cpp  stmt_function.cpp  stmt_if.cpp  stmt_return.cpp  stmt_switch.cpp  stmt_try_catch.cpp  stmt_while.cpp  stmt_with_task_group.cpp
compiler/src/phase3/evaluator_parts/stmt_controllers/: 01_stmt_controller_core.cpp  02_stmt_controller_control_flow.cpp  03_stmt_controller_definition.cpp  04_stmt_controller_orchestrator.cpp
compiler/src/phase3/semantic_parts/: 01_core.cpp  02_types_and_names.cpp  03_context_tier.cpp  04_analysis.cpp  05_expr_infer.cpp  06_dumps.cpp
compiler/src/phase4/: codegen.cpp
compiler/src/phase4/codegen_parts/: 01_helpers.cpp  02_ir_kind.cpp  03_ir_to_c.cpp  04_codegen_front.cpp  05_codegen_flow.cpp  06_codegen_expr.cpp
compiler/src/phase4/codegen_parts/dispatch/: 01_stmt_dispatch.cpp
compiler/src/phase5/runtime/: environment.cpp  index_assign.cpp  index_eval.cpp  interpreter_core.cpp  interpreter_ops.cpp  matrix_layout.cpp  matrix_literal.cpp  value_constructors.cpp  value_repr.cpp
compiler/src/phase5/runtime/ops/: README.md  ops_common_numeric.cpp  ops_list_arithmetic.cpp  ops_matrix_arithmetic.cpp  runtime_ops.h
compiler/src/phase5/runtime/ops/controllers/: 01_ops_controller_core.cpp  02_ops_controller_containers.cpp  03_ops_controller_scalar.cpp  04_ops_controller_orchestrator.cpp  README.md
compiler/src/phase5/runtime/primitives/: 01_numeric_scalar_core.cpp  02_numeric_builtin_registry.cpp
compiler/src/phase5/runtime/primitives/numeric_scalar_core_parts/: 01_mpfr_and_cast.cpp  02_compare_and_normalize.cpp  03_compute_core.cpp  04_inplace_and_cache.cpp  05_numeric_kind_and_repeat.cpp  06_bench_and_tail.cpp
compiler/src/phase6/runtime/: 01_hetero_plan_common.cpp  02_hetero_list_ops.cpp  03_hetero_matrix_ops.cpp
compiler/src/phase7/runtime/: 01_pipeline_types.cpp  02_pipeline_parse.cpp  03_pipeline_exec_list.cpp  04_pipeline_exec_matrix.cpp  05_pipeline_entry.cpp
compiler/src/phase8/runtime/: 01_schedule.cpp  02_pack_cache.cpp  03_matmul_kernel.cpp  04_matmul_entry.cpp
compiler/src/phase9/runtime/: 01_scheduler.cpp  02_task_runtime.cpp  03_channel_runtime.cpp  04_parallel_runtime.cpp  05_stream_runtime.cpp  phase9_runtime.h
core/: README.md
docs/: ci_cd_run_log.txt  concurrency_model.md  container_model.md  decisions.md  grammar.md  language_spec.md  memory_model.md  platform_support_matrix.md  platform_support_policy.json  repository_hardening.md  research_notes.md  tier_model.md
port/: README.md
runtime/: CMakeLists.txt
scripts/: autofdo_cycle.sh  bolt_opt.sh  bootstrap_phase1.sh  pgo_cycle.sh  phase10_multiarch.sh  phase10_platform_matrix.sh  phase10_safety_gates.sh  release_package.sh  ubuntu_toolchain.sh
stdlib/: CMakeLists.txt
tests/: CMakeLists.txt
tune/: matmul_tuner.py
(+253 files in other folders)
